--- a/index.html
+++ b/index.html
@@ -1,30 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/main.css">
     <title>point and click adventure</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div id="title"><h1 id="mainTitle"></h1></div>
-    
-    <div id="gameWindow"> 
-        <div id="dialogBar" class="foreground"> 
-         <div id="setMainDialoge"> </div>
-         <div id="counterSpeech" class="foreground"> <img src="assets/img/ghost_speak.png" alt="ghost_speak"></div>
-         <div id="mainCharacterSpeech" class="foreground"> <img src="assets/img/animated-character-1-idle.gif" alt="character"></div>
-         <div id="brownBar"> <p>NPC: Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, quos repellendus eos illo facilis sunt quidem debitis! Nobis iure explicabo culpa! Ullam, perspiciatis voluptates animi esse eos harum qui accusamus!</p></div>                 
+    <div id="title">
+        <h1 id="mainTitle"></h1>
+    </div>
+
+    <div id="gameWindow">
+        <div id="dialogBar" class="foreground">
+            <div id="setMainDialoge"> </div>
+            <div id="counterSpeech" class="foreground"> <img src="assets/img/ghost_speak.png" alt="ghost_speak"></div>
+            <div id="mainCharacterSpeech" class="foreground"> </div>
+            <div id="brownBar">
+                <p>NPC: Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, quos repellendus eos illo facilis
+                    sunt quidem debitis! Nobis iure explicabo culpa! Ullam, perspiciatis voluptates animi esse eos harum
+                    qui accusamus!</p>
+            </div>
         </div>
 
-        <div id="inventoryBox" class="foreground"> 
+        <div id="inventoryBox" class="foreground">
             <p>Inventory</p>
-            <ul id="inventoryList"> 
+            <ul id="inventoryList">
 
             </ul>
-         </div>
+        </div>
+
+        <!--Foreground items-->
+        <div id="door1" class="foreground"></div>
+        <div id="door2" class="foreground"></div>
+
+        <!--Main character-->
+        <div id="mainCharacter" class="heroCharacter"><img src="assets/img/animated-character-1-idle.gif"
+                alt="character"></div>
+        <!--Background-->
+        <div id="tilemap" class="background">
+
+        </div>
 
     </div>
-    <script src="js/main.js"></script>  
+    <script src="js/main.js"></script>
 </body>
+
 </html>
